# app-usage-tracker

./: Cargo.toml  README.md  app_usage.db
src/: Untitled-2.json  main.rs  windows_fg.rs
