[package]
name = "app-usage-tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
sysinfo = "^0.27"
plotters = "0.3"
tokio = { version = "^1.19", features = ["full"] }
rusqlite = { version = "0.32.0", features = ["bundled"] }

[dependencies.windows]
version = "^0.51"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_SystemInformation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
]
